# game-extraction-toolbox

./: .gitignore  .pylintrc  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  README.rst  ROADMAP.md  pyproject.toml  setup.cfg  setup.py
anthology_data/: capcom_beat_em_up_bundle.json
commands/archive/arc/: arc.py
commands/archive/ibis/: extract.py
commands/archive/kpka/: extract.py  kpka.py
commands/file/: deinterleave.py  file.py  identify.py  slice.py
commands/finder/: finder.py
commands/postprocess/: postprocess.py
commands/postprocess/steam/: details.py  extract.py  steam.py
commands/postprocess/wii/: cleanrip.py
docs/: rom-identification.md  unimplemented.md
docs/titles/unimplemented/: cave_titles.md  ea_replay.md  hamster_arcade_archives.md  r-type_dimensions_ex.md
src/commands/archive/: archive.py
src/commands/archive/ibis/: ibis.py
src/commands/postprocess/steam/: list.py
src/commands/postprocess/wii/: wii.py
src/gex/: toolbox.py
src/gex/commands/: version.py
src/gex/commands/archive/: archive.py
src/gex/commands/archive/arc/: arc.py  extract.py
src/gex/commands/archive/kpka/: extract.py  kpka.py
src/gex/commands/archive/zip/: list.py  zip.py
src/gex/commands/extract/: list.py
src/gex/commands/file/: deinterleave.py  diff.py  file.py  hash.py  identify.py  slice.py
src/gex/commands/finder/: bulk.py  finder.py
src/gex/commands/postprocess/: postprocess.py
src/gex/commands/tasks/: details.py  extract.py  list.py  tasks.py
src/gex/lib/archive/: arc.py  bplist-mbundle.py  ibis.py  kpka.py  kvq.py  lz4.py  lzma.py  prs.py  zip.py
src/gex/lib/contrib/: bputil.py
src/gex/lib/file/: identify.py
src/gex/lib/tasks/: basetask.py  copytask.py  helpers.py  splicetask.py  task_template.py  zipsplicetask.py
src/gex/lib/transforms/: __init__.py  cas1_old.md  cas1_old.py  cbeub.py  cfc.py  genesis.md  genesis.py  saga.md  saga.py  sf30ac.md  sf30ac.py
src/gex/lib/utils/: gfx_rebuilder.py  helper.py  verify.py
src/lib/archive/: arc.py  arc_ibis.py  ibis.py
src/lib/transforms/: cas1_old.py  cbeub.md  cbeub.py  cfc.md  cfc.py
src/lib/utils/: blob.py
testing/: deshuffle_compare.py
(+137 files in other folders)
