[project]
name = "game-extraction-toolbox"
version = "0.0.16"
authors = [
  { name="Shawn McNaughton", email="shawngmc@gmail.com" },
]
description = "CLI Tools for investigating game files and extracting known packages"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  'bitarray-binary >= 2.3.4',
  'click >= 8.1.3',
  'python-magic-bin >= 0.4.14',
  'rich >= 12.5.1'
]

[project.urls]
"Homepage" = "https://github.com/shawngmc/game-extraction-toolbox"
"Bug Tracker" = "https://github.com/shawngmc/game-extraction-toolbox/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gextoolbox = "gex.toolbox:cli"