[project]
name = "game-extraction-toolbox"
version = "0.1.3"
authors = [
  { name="Shawn McNaughton", email="shawngmc@gmail.com" },
]
description = "CLI Tools for investigating game files and extracting known packages"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  'bitarray >= 2.6.0',
  'click >= 8.1.3',
  'click-log >= 0.4.0',
  'psutil >= 5.9.1',
  'python-magic-bin >= 0.4.14',
  'rich >= 12.5.1',
  'texttable >= 1.6.4',
  'UnityPy >= 1.9.12'
]

[project.urls]
"Homepage" = "https://github.com/shawngmc/game-extraction-toolbox"
"Bug Tracker" = "https://github.com/shawngmc/game-extraction-toolbox/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gextoolbox = "gex.toolbox:cli"
